(feature): adapt profile.sh and minor changes in binaries.sh