@@ -1,66 +1,43 @@
-## Export PATH
-export PATH=/usr/local/bin:$HOME/bin:/usr/local/sbin:$PATH
+# Export PATH
+export PATH=/usr/local/bin:$HOME/bin:/usr/local/sbin:/usr/local/share/npm/bin:$PATH
 
-## Put brew's ruby in front
+# Put brew's ruby in front
 export PATH=/usr/local/opt/ruby/bin:$PATH
 
-## Use gnu tools instead
+# Use gnu tools instead
 export PATH=$(brew --prefix coreutils)/libexec/gnubin:$PATH
 
-## Add the $GOPATH/bin to path
-export PATH=$HOME/Go/bin:$PATH
+# Setup jEnv
+export PATH=$HOME/.jenv/bin:$PATH
+eval "$(jenv init -)"
+jenv add `/usr/libexec/java_home`
 
-## Modify NODE_PATH
-# export NODE_PATH=lib
+# Use atom as default editor
+EDITOR="atom"
 
-# Set the Android Home
-# use: brew install android-sdk
-export ANDROID_HOME=/usr/local/opt/android-sdk
-
-# JAVA HOME
-export JAVA_HOME="/Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home"
-
-# boot2docker goods
-export DOCKER_HOST=tcp://192.168.59.103:2376
-export DOCKER_CERT_PATH=/Users/matt/.boot2docker/certs/boot2docker-vm
-export DOCKER_TLS_VERIFY=1
-
-# $GOPATH
-export GOPATH=$HOME/Go
-
-# Use atom for Ctrl+x+e
-EDITOR="subl"
-
-# function subl() {
-#   atom "$@"
-# }
-
-# Default cd path for interactive shells
-if test “${PS1+set}”; then
-  CDPATH=:"..:~:~/Projects";
-fi
+# Add gradle properties
+export GRADLE_OPTS="-Xmx2048m -Xms256m -XX:MaxPermSize=512m"
 
 # Add bash completion (for git and others)
 if [ -f `brew --prefix`/etc/bash_completion ]; then
     . `brew --prefix`/etc/bash_completion
 fi
 
-## Start an HTTP server from a directory, optionally specifying the port
+# Start an HTTP server from a directory, optionally specifying the port
 function server() {
     local port="${1:-8000}"
     open "http://localhost:${port}/" && python -m SimpleHTTPServer "$port"
 }
 
+# On branches, this will return the branch name. (no branch) otherwise
 git_branch() {
-  # On branches, this will return the branch name
-  # On non-branches, (no branch)
   ref="$(git symbolic-ref HEAD 2> /dev/null | sed -e 's/refs\/heads\///')"
   if [[ "$ref" != "" ]]; then
     echo "$ref "
   fi
 }
 
-# fastest possible way to check if repo is dirty
+# Fastest possible way to check if repo is dirty
 git_dirty() {
   # If the git status has *any* changes (e.g. dirty), echo our character
   if [[ -n "$(git status --porcelain 2> /dev/null)" ]]; then
@@ -101,19 +78,6 @@ git_progress() {
   fi
 }
 
-# colors
-color_bold="\[$(tput bold)\]"
-color_reset="\[$(tput sgr0)\]"
-color_red="\[$(tput setaf 1)\]"
-color_green="\[$(tput setaf 2)\]"
-color_yellow="\[$(tput setaf 3)\]"
-color_blue="\[$(tput setaf 4)\]"
-color_purple="\[$(tput setaf 5)\]"
-color_teal="\[$(tput setaf 6)\]"
-color_white="\[$(tput setaf 7)\]"
-color_black="\[$(tput setaf 8)\]"
-bg_yellow="\[$(tput setab 3)\]"
-
 # Add git to the terminal prompt
 git_prompt() {
   # Don't go any further if we're not in a git repo
@@ -131,6 +95,19 @@ git_prompt() {
   echo -n $color_reset
 }
 
+# colors
+color_bold="\[$(tput bold)\]"
+color_reset="\[$(tput sgr0)\]"
+color_red="\[$(tput setaf 1)\]"
+color_green="\[$(tput setaf 2)\]"
+color_yellow="\[$(tput setaf 3)\]"
+color_blue="\[$(tput setaf 4)\]"
+color_purple="\[$(tput setaf 5)\]"
+color_teal="\[$(tput setaf 6)\]"
+color_white="\[$(tput setaf 7)\]"
+color_black="\[$(tput setaf 8)\]"
+bg_yellow="\[$(tput setab 3)\]"
+
 ## Customize the terminal input line
 prompt() {
   PS1="$bg_yellow $color_reset ☁  $color_blue\W$color_reset $(git_prompt): "
@@ -142,70 +119,22 @@ PROMPT_COMMAND=prompt
 # Aliases #
 ###########
 
-## matrix fun
-function hax0r() {
-    perl -e '$|++; while (1) { print " " x (rand(35) + 1), int(rand(2)) }'
-}
-
-## Add hub
+# Add hub
 eval "$(hub alias -s)"
 
-## Color ls
-alias ls='ls --color=auto -hF'
+# Color ls
+alias ls='ls --color=auto -ahF'
 
-## Display as a list, sorting by time modified
-alias ll='ls -1t'
+# Display as a list
+alias ll='ls -1'
 
-## Display the insides of a particular directory
+# Display the insides of a particular directory
 alias lv='ls -R'
 
-## Git aliases from TJ Holowaychuk
-alias gd="git diff | subl"
-alias ga="git add"
-alias gbd="git branch -D"
-alias gs="git status"
-alias gc="git commit -m"
-alias gca="git commit -a -m"
-alias gm="git merge --ff"
-alias gpt="git push --tags"
-alias gp="git push"
-alias grh="git reset --hard"
-alias gb="git branch"
-alias gcob="git checkout -b"
-alias gco="git checkout"
-alias gba="git branch -a"
-alias gcp="git cherry-pick"
-alias gl="git log --pretty='format:%Cgreen%h%Creset %an - %s' --graph"
-alias gpom="git pull --rebase origin master"
-alias gpum="git pull --rebase upstream master"
-alias gcd='cd "`git rev-parse --show-toplevel`"'
-
-# Run `dig` & display the most useful info
-
-function digga {
-  dig +nocmd "$1" any +multiline +noall +answer;
-}
-
-## Get the process on a given port
+# Get the process on a given port
 function port() {
   lsof -i ":${1:-80}"
 }
-
-## subl
-
-## gopen - open to own github
-
-function gopen() {
-  open "https://github.com/matthewmueller/${1}";
-}
-
-## Open localhost
-
-function ol() {
-  open "http://localhost:${1:-3000}"
-}
-
-alias wm="watch -q make &"
 
 # Update the number of open files
 ulimit -n 1000
